# evince_ink

./: Makefile.am  configure.ac
backend/pdf/: ev-poppler.cc
data/icons/16x16/actions/: Makefile.am
data/icons/22x22/actions/: Makefile.am
libdocument/: Makefile.am  ev-annotation.c  ev-annotation.h  ev-mapping-list.c  ev-mapping-list.h  ev-mapping-tree.c  ev-mapping-tree.h
libdocument/tests/: Makefile.am  test_quadtree.c
libview/: ev-view-private.h  ev-view.c  ev-view.h
shell/: Makefile.am  ev-sidebar-annotations.c  ev-sidebar-annotations.h  ev-window.c
